--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                         <div id="draw-grid" class="grid"></div>
                         <div class="button-panel">
                             <button id="draw-save-btn" class="save-btn">Save</button>
+                            <button id="draw-load-btn">Load</button>
                             <button id="draw-tasks-btn">Tasks</button>
                             <button id="draw-traps-btn">Traps</button>
                         </div>
