--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="main-container" style="display: flex; align-items: flex-start;">
         <!-- Overview panel will be inserted here by script.js -->
         <div>
+            <div id="overview-panel"></div>
             <div id="grid" class="grid"></div>
             <div class="button-panel">
                 <button id="reset-btn">Reset</button>
